# Graphical-Calculations

./: README.md
Practice-1/: Practice-1.sln  Practice-1.vcxproj  kernel.cu  Отчёт.docx
Practice-2/: Practice-1.vcxproj  Practice-2.ncu-proj  Practice-2.sln  kernel.cu  Отчёт.docx
Practice-3/: kernel.cu
Practice-3-4/: Practice-3.sln  Practice-3.vcxproj  kernel.cu  Отчёт.docx
Practice-4/: nn.cpp  nn_cuda.cu  requirements.txt  Отчёт.docx
Practice-5/: Practice-4.sln  Practice-4.vcxproj  nn_numpy.py  nn_pytorch.py  Задание.txt  Отчёт.docx
Practice-6/: Practice-6.sln  Practice-6.vcxproj  add.cu  main.c  Отчёт.docx
Practice-7/: CMakeLists.txt  Practice-7.sln  Practice-7.vcxproj  kernel.cu  Отчёт.docx
